"dropdown menus for Asia and Europe done w/ability to hide menus on click

--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,13 @@
      <h1></h1>
 
      <div class="dropdown", id="countries">
-       <div class='dropdown-button'></div>
-       <ul class='dropdown-selection'></ul>
+       <div class='dropdown-button' id="europe"></div>
+       <ul class='dropdown-selection hidden' id="europe2"></ul>
      </div>
 
      <div class="dropdown", id="countries2">
        <div class='dropdown-button' id="asia"></div>
-       <ul class='dropdown-selection' id="asia2"></ul>
+       <ul class='dropdown-selection hidden' id="asia2"></ul>
      </div>
 
    </main>
