Working nav page & trip create

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,31 @@
  <head>
    <meta charset="utf-8">
    <title>Trips</title>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="style.css">
  </head>
+
  <body>
    <main id= "main">
      <h1></h1>
 
    </main>
+
+   <!-- The overlay -->
+   <div id="myNav" class="overlay">
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <h2 id="name"></h2>
+           <img id="img">
+      <p id="description"></p>
+        <!-- <button class="add"></button> -->
+             <ul class=""></ul>
+    </div>
+   </div>
+   <!-- Use any element to open/show the overlay navigation menu -->
+   <!-- <span onclick="openNav()"></span> -->
+
    <script src="./index.js"></script>
  </body>
 </html>
